scratch_manifests/issue-20650.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: issue-20650
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: test
  namespace: issue-20650
spec:
  egress:
    - toFQDNs:
        - matchPattern: some-bucket.s3.eu-west-1.amazonaws.com
    - toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
  endpointSelector:
    matchLabels: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: issue-20650
spec:
  containers:
    - args:
        - -c
        - seq 1 99999 | xargs -P5 -I{} curl https://some-bucket.s3.eu-west-1.amazonaws.com?{}
      command:
        - sh
      image: curlimages/curl:latest
      imagePullPolicy: IfNotPresent
      name: main
      resources: {}
      securityContext: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  securityContext: {}
